# paramfs

./: CMakeLists.txt  README.md
include/paramfs/: param_error.hpp  paramfs.hpp  provider_i.hpp  registry_i.hpp  status.hpp
src/app/: main.cpp  sample_provider.cpp  sample_provider.hpp
src/paramfs/: detail.hpp  param_error.cpp  paramfs.cpp  paramvalue_node.cpp  paramvalue_node.hpp  registry.cpp  registry.hpp  status.cpp
src/paramfs/filesystem/: directory.cpp  directory.hpp  filesystem.cpp  filesystem.hpp  infile.cpp  infile.hpp  node_i.hpp  outfile.cpp  outfile.hpp  pseudofile_i.hpp  static_file.cpp  static_file.hpp
test-src/paramfs/: test_outfile.cpp  test_status.cpp
